add export for CookieManager